<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.b2ngames.findmyteacherapp.FindMyTeacherLoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/rlActivity">

    <EditText
        android:id="@+id/etUserEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="51dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/etPasword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/etUserEmail"
        android:layout_alignRight="@+id/etUserEmail"
        android:layout_below="@+id/etUserEmail"
        android:layout_marginTop="60dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etPasword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="57dp"
        android:text="@string/login"/>

        <TextView
            android:id="@+id/tvOr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnLogin"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:textColor="@color/colorBlack"
            android:textSize="20dp"
            android:text="@string/or"/>

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnLogin"
        android:layout_marginLeft="102dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="61dp"
        android:text="@string/register_new_user"/>

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/rlWaitingCircle"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">
        <ProgressBar
            android:id="@+id/pbWaitingCircle"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="161dp"
            android:indeterminate="true"
            android:layout_gravity="center"
            />


    </RelativeLayout>
    </RelativeLayout>
