<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.b2ngames.findmyteacherapp.FindMyTeacherRegisterActivity"
    >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/rlActivity">
    <EditText
        android:id="@+id/etUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:ems="10"
        android:hint="@string/enter_username"
        android:inputType="textPersonName"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:id="@+id/etPasword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/enter_pasword"
        android:layout_below="@+id/etUserName"
        android:layout_alignLeft="@+id/etUserName"
        android:layout_alignStart="@+id/etUserName"/>



    <EditText
        android:id="@+id/etRepeatPasword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/repeat_pasword"
        android:layout_below="@+id/etPasword"
        android:layout_alignLeft="@+id/etPasword"
        android:layout_alignStart="@+id/etPasword"
        android:layout_marginTop="29dp"/>

    <EditText
        android:id="@+id/etUserEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/enter_email"
        android:layout_below="@+id/etRepeatPasword"
        android:layout_alignLeft="@+id/etRepeatPasword"
        android:layout_alignStart="@+id/etRepeatPasword"/>

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etUserEmail"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="37dp"
        android:text="@string/register"/>
        </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/rlWaitingCircle"
        android:visibility="invisible"
       >
        <ProgressBar
            android:id="@+id/pbWaitingCircle"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="161dp"
            android:indeterminate="true"
            android:layout_gravity="center"
            android:visibility="visible"/>
    </RelativeLayout>
</RelativeLayout>
