<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.b2ngames.findmyteacherapp.ChangePasswordActivity"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <LinearLayout

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

        <include
          layout="@layout/app_bar_common"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
            />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rlActivity">
        <EditText
            android:id="@+id/etUserEmail"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:layout_marginTop="40dp"
            android:hint="@string/enter_email"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"/>

        <EditText
            android:id="@+id/etPasword"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:layout_marginTop="100dp"
            android:hint="@string/enter_old_password"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"/>

        <EditText
            android:id="@+id/etNewPassword"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:layout_marginTop="160dp"
            android:hint="@string/enter_new_password"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"/>

          <EditText
             android:id="@+id/etRepeatNewPassword"
             android:layout_width="250dp"
             android:layout_height="wrap_content"
             android:ems="10"
             android:inputType="textPassword"
             android:layout_marginTop="220dp"
             android:hint="@string/repeat_new_password"
             android:layout_centerHorizontal="true"
             android:layout_alignParentTop="true"/>

           <Button
             android:id="@+id/btnSubmit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/submit"
             android:layout_centerHorizontal="true"
             android:layout_alignParentTop="true"
             android:layout_marginTop="320dp"/>



            </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/rlWaitingCircle"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:visibility="invisible">
            <ProgressBar
                android:id="@+id/pbWaitingCircle"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="161dp"
                android:indeterminate="true"
                android:layout_gravity="center"
                />
        </RelativeLayout>


    </LinearLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header_main"
        app:menu="@menu/activity_main_drawer"
        />
</android.support.v4.widget.DrawerLayout>