<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.b2ngames.findmyteacherapp.TeacherAreaActivity"
    android:id="@+id/drawer_layout"
    android:fitsSystemWindows="true">
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include
            layout="@layout/app_bar_common"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/include2"/>

        <View style="@style/Divider"/>

    <Button
        android:id="@+id/btnSubjects"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text="@string/my_subjects"
        android:background="@android:drawable/list_selector_background"/>

        <View style="@style/Divider"/>

        <Button
            android:id="@+id/btnAvailavility"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="@string/availability"
            android:background="@android:drawable/list_selector_background"/>

        <View style="@style/Divider"/>

        <Button
            android:id="@+id/btnLocation"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="@string/my_location"
            android:background="@android:drawable/list_selector_background"/>

        <View style="@style/Divider"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="vertical"
            android:id="@+id/llDomicilyServices"
            >
            <TextView
                android:id="@+id/tvDomicilyService"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/domicily_service"
                android:textSize="26sp"/>

            <Switch
                android:id="@+id/swDomicilyService"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:checked="true"
                android:switchPadding="-42sp"
                android:text="Yes"
                android:textAlignment="center"
                android:textSize="17sp"/>

            </LinearLayout>

        <View style="@style/Divider"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:id="@+id/llMaxPrice"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/tvPrice"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/price"
                android:textSize="26sp"/>

            <SeekBar
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:progress="3"
                android:id="@+id/sbPrice"/>

            <TextView
                android:id="@+id/tvSeekBarPriceDisplay"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="10€"
                android:textAlignment="center"/>
            </LinearLayout>
    </LinearLayout>
    </ScrollView>
    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header_main"
        app:menu="@menu/activity_main_drawer" />


</android.support.v4.widget.DrawerLayout>
