<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:id="@+id/drawer_layout"
    tools:openDrawer="start"
    tools:context="com.b2ngames.findmyteacherapp.LoginSelectActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <!--<include-->
        <!--android:id="@+id/include2"-->
        <!--layout="@layout/app_bar_common"-->
        <!--android:layout_width="0dp"-->
        <!--android:layout_height="wrap_content"-->
        <!--app:layout_constraintRight_toRightOf="parent"-->
        <!--app:layout_constraintLeft_toLeftOf="parent"-->
        <!--app:layout_constraintTop_toTopOf="parent"-->
        <!--app:layout_constraintHorizontal_bias="0.0"-->
        <!--app:layout_constraintVertical_bias="0.0"/>-->

        <Button
            android:id="@+id/btnLogInFaceBook"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/login_facebook"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.21"/>

        <Button
            android:id="@+id/btnLogInGooglePlus"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="250dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/login_google_plus"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0.529"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/btnLogInFaceBook"
            app:layout_constraintVertical_bias="0.5"/>

        <Button
            android:id="@+id/btnLogInFindMyTeacherApp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="141dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/login_find_my_teacher"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/btnLogInGooglePlus"/>
    </android.support.constraint.ConstraintLayout>

    <!--<android.support.design.widget.NavigationView-->
        <!--android:id="@+id/nav_view"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="match_parent"-->
        <!--android:layout_gravity="start"-->
        <!--android:fitsSystemWindows="true"-->
        <!--app:headerLayout="@layout/nav_header_main"-->
        <!--app:menu="@menu/activity_main_drawer" />-->

</RelativeLayout>
